# project-ose

./: .clangd  .gitignore  CMakeLists.txt  README.md
cmake/: 3ds.cmake  platform.cmake
scripts/: build.bat  build.sh
source/core/: CMakeLists.txt
source/core/include/: engine.h  player_character.h  skills.h
source/core/source/: engine.cc  player_character.cc
